; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_latm_parser.c_latm_parse.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_latm_parser.c_latm_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@PARSER_FLAG_COMPLETE_FRAMES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*, i32**, i32*, i32*, i32)* @latm_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @latm_parse(%struct.TYPE_6__* %0, i32* %1, i32** %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_5__*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %18, align 8
  store %struct.TYPE_5__* %19, %struct.TYPE_5__** %14, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  store i32* %21, i32** %15, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @PARSER_FLAG_COMPLETE_FRAMES, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %6
  %29 = load i32, i32* %13, align 4
  store i32 %29, i32* %16, align 4
  br label %44

30:                                               ; preds = %6
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = load i32, i32* %13, align 4
  %34 = call i32 @latm_find_frame_end(%struct.TYPE_6__* %31, i32* %32, i32 %33)
  store i32 %34, i32* %16, align 4
  %35 = load i32*, i32** %15, align 8
  %36 = load i32, i32* %16, align 4
  %37 = call i64 @ff_combine_frame(i32* %35, i32 %36, i32** %12, i32* %13)
  %38 = icmp slt i64 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %30
  %40 = load i32**, i32*** %10, align 8
  store i32* null, i32** %40, align 8
  %41 = load i32*, i32** %11, align 8
  store i32 0, i32* %41, align 4
  %42 = load i32, i32* %13, align 4
  store i32 %42, i32* %7, align 4
  br label %50

43:                                               ; preds = %30
  br label %44

44:                                               ; preds = %43, %28
  %45 = load i32*, i32** %12, align 8
  %46 = load i32**, i32*** %10, align 8
  store i32* %45, i32** %46, align 8
  %47 = load i32, i32* %13, align 4
  %48 = load i32*, i32** %11, align 8
  store i32 %47, i32* %48, align 4
  %49 = load i32, i32* %16, align 4
  store i32 %49, i32* %7, align 4
  br label %50

50:                                               ; preds = %44, %39
  %51 = load i32, i32* %7, align 4
  ret i32 %51
}

declare dso_local i32 @latm_find_frame_end(%struct.TYPE_6__*, i32*, i32) #1

declare dso_local i64 @ff_combine_frame(i32*, i32, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
